# polis2-streamlit

./: README.md  pyproject.toml  recipe_polis2_statements.py  streamlit_app.py
