[project]
name = "polis2-streamlit"
version = "0.1.0"
description = "Streamlit app for exploring Pol.is reports with Polis2 statements"
requires-python = ">=3.10"

dependencies = [
  "streamlit",

  # GitHub dependencies
  "polismath-commentgraph @ git+https://github.com/patcon/polis@package-commentgraph#subdirectory=delphi/umap_narrative/polismath_commentgraph",
  "valency-anndata @ git+https://github.com/patcon/valency-anndata@main",
]
