[project]
name = "polis2-streamlit"
version = "0.1.0"
description = "Streamlit app for exploring Pol.is reports with Polis2 statements"
requires-python = ">=3.10"

dependencies = [
  "streamlit",
  "datamapplot",
  "numpy",

  # GitHub dependencies
  # torch (transitive via sentence-transformers) has no macOS x86_64 wheel,
  # so gate this on Linux where Streamlit Cloud actually runs.
  "polismath-commentgraph @ git+https://github.com/patcon/polis@package-commentgraph#subdirectory=delphi/umap_narrative/polismath_commentgraph ; sys_platform == 'linux'",
  "valency-anndata @ git+https://github.com/patcon/valency-anndata@main",
]
